change note image's path

--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -18,13 +18,13 @@
 
 1. 流程
 
-![image-20220504213059438](E:\JavaProject\Reggie\note\pictures\image-20220504213059438.png)
+![image-20220504213059438](.\pictures\image-20220504213059438.png)
 
 
 
 2. 角色分工
 
-   ![image-20220504213446025](E:\JavaProject\Reggie\note\pictures\image-20220504213446025.png)
+   ![image-20220504213446025](.\pictures\image-20220504213446025.png)
 
    
 
@@ -34,7 +34,7 @@
    - [ ] 测试环境
    - [ ] 生产环境
 
-   ![image-20220504213704875](E:\JavaProject\Reggie\note\pictures\image-20220504213704875.png)
+   ![image-20220504213704875](.\pictures\image-20220504213704875.png)
 
 
 
@@ -43,7 +43,7 @@
 
 
 
-![image-20220504215641403](E:\JavaProject\Reggie\note\pictures\image-20220504215641403.png)
+![image-20220504215641403](.\pictures\image-20220504215641403.png)
 
 
 
@@ -51,7 +51,7 @@
 
 
 
-![image-20220504215729984](E:\JavaProject\Reggie\note\pictures\image-20220504215729984.png)
+![image-20220504215729984](.\pictures\image-20220504215729984.png)
 
 * 产品原型主要用于展示项目的功能，并不是最终的页面效果。
 
@@ -61,7 +61,7 @@
 
 
 
-![image-20220504220120986](E:\JavaProject\Reggie\note\pictures\image-20220504220120986.png)
+![image-20220504220120986](.\pictures\image-20220504220120986.png)
 
 
 
@@ -69,7 +69,7 @@
 
 
 
-![image-20220504220544306](E:\JavaProject\Reggie\note\pictures\image-20220504220544306.png)
+![image-20220504220544306](.\pictures\image-20220504220544306.png)
 
 
 
@@ -77,7 +77,7 @@
 
 
 
-![image-20220504222643999](E:\JavaProject\Reggie\note\pictures\image-20220504222643999.png)
+![image-20220504222643999](.\pictures\image-20220504222643999.png)
 
 
 
@@ -91,7 +91,7 @@
 
 1. 建库
 
-![image-20220504223008159](E:\JavaProject\Reggie\note\pictures\image-20220504223008159.png)
+![image-20220504223008159](.\pictures\image-20220504223008159.png)
 
 
 
@@ -476,7 +476,7 @@
    
    ```
 
-   ![image-20220504223337842](E:\JavaProject\Reggie\note\pictures\image-20220504223337842.png)
+   ![image-20220504223337842](.\pictures\image-20220504223337842.png)
 
 
 
@@ -492,21 +492,21 @@
 
 1. 选择`maven`项目
 
-   ![image-20220504224243270](E:\JavaProject\Reggie\note\pictures\image-20220504224243270.png)
+   ![image-20220504224243270](.\pictures\image-20220504224243270.png)
 
 2. 输入项目名，完成
 
-   ![image-20220504224343045](E:\JavaProject\Reggie\note\pictures\image-20220504224343045.png)
+   ![image-20220504224343045](.\pictures\image-20220504224343045.png)
 
 3. 初始的`pom`文件，上一步忘写了`artifact`设置的可以直接在pom中改
 
-   ![image-20220504224710302](E:\JavaProject\Reggie\note\pictures\image-20220504224710302.png)
+   ![image-20220504224710302](.\pictures\image-20220504224710302.png)
 
 4. 配置完成后，检查`maven`、`jdk`、
 
-   ![image-20220504225058537](E:\JavaProject\Reggie\note\pictures\image-20220504225058537.png)
+   ![image-20220504225058537](.\pictures\image-20220504225058537.png)
 
-   ​	![·](E:\JavaProject\Reggie\note\pictures\image-20220504225301064.png)
+   ​	![·](.\pictures\image-20220504225301064.png)
 
 5. 导入具体的依赖
 
@@ -623,19 +623,19 @@
 
 7. 初始项目启动
 
-   ![image-20220504230904831](E:\JavaProject\Reggie\note\pictures\image-20220504230904831.png)
+   ![image-20220504230904831](.\pictures\image-20220504230904831.png)
 
 8. 导入静态资源文件，`backend`存放的时候后台管理的页面文件，`font`存放的前台的展示页面文件
 
-   ![image-20220504231424532](E:\JavaProject\Reggie\note\pictures\image-20220504231424532.png)
+   ![image-20220504231424532](.\pictures\image-20220504231424532.png)
 
 9. 由于boot默认的静态资源在`static`文件夹下，所以我们需要自己指定资源文件路径，创建`config`包下的`WebMvcConfig`，在这个里面指定。
 
-   ![image-20220504232925666](E:\JavaProject\Reggie\note\pictures\image-20220504232925666.png)
+   ![image-20220504232925666](.\pictures\image-20220504232925666.png)
 
    * 重新运行项目，效果如图
 
-     ![image-20220504233117036](E:\JavaProject\Reggie\note\pictures\image-20220504233117036.png)		
+     ![image-20220504233117036](.\pictures\image-20220504233117036.png)		
 
 
 
