add login,logout, add user

--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -633,7 +633,7 @@
 
    ![image-20220504232925666](.\pictures\image-20220504232925666.png)
 
-   * 重新运行项目，效果如图
+   * 重新运行项目，效果如图（localhost:8080/backend/index.html）
 
      ![image-20220504233117036](.\pictures\image-20220504233117036.png)		
 
@@ -648,4 +648,166 @@
 
 
 ## 登录功能
+
+
+
+### 需求分析
+
+![image-20220507203841481](pictures/image-20220507203841481.png)
+
+
+
+> 根据查看前端代码，发现后端需要返回`code`、`data`、`msg`几个数据，这样才能正确登录
+>
+> ![image-20220507204342888](pictures/image-20220507204342888.png)
+
+
+
+### 代码开发
+
+1. ![image-20220507211908772](pictures/image-20220507211908772.png)
+
+2. ![image-20220507212446318](pictures/image-20220507212446318.png)
+
+3. ![image-20220507213949608](pictures/image-20220507213949608.png)
+
+4. ![image-20220507223535122](pictures/image-20220507223535122.png)
+
+   > 真正写代码的时候也是先分析出步骤/逻辑，复制到idea中，然后才实施敲。
+
+
+
+## 退出功能
+
+
+
+### 需求分析
+
+ ![image-20220508191637559](pictures/image-20220508191637559.png)
+
+
+
+### 代码开发
+
+![image-20220508192828014](pictures/image-20220508192828014.png)
+
+
+
+## 员工管理业务开发
+
+
+
+### 完善登录功能
+
+> 首先需要完善前面登录的一个BUG：不经过登录页面直接访问http://localhost:8080/backend/index.html也可以登录到后台的首页。这是不合理的。
+>
+> 效果：直接访问后台首页的时候不会过去，而是跳转到登录页面，经过登录操作才能正确访问后台首页。
+
+
+
+#### 问题分析
+
+![image-20220508201921313](pictures/image-20220508201921313.png)
+
+
+
+#### 代码实现
+
+![image-20220508202041391](pictures/image-20220508202041391.png)
+
+1. 第2个是为了扫描到第一个的注解
+
+2. 第三步的处理逻辑
+
+   ![image-20220508202156071](pictures/image-20220508202156071.png)
+
+3. 前端中的调试
+
+   ![image-20220508220137279](pictures/image-20220508220137279.png)
+
+
+
+
+
+### 新增员工
+
+
+
+#### 需求分析
+
+![image-20220508220250027](pictures/image-20220508220250027.png)
+
+
+
+
+
+#### 数据模型
+
+![image-20220508220412538](pictures/image-20220508220412538.png)
+
+![image-20220508220514862](pictures/image-20220508220514862.png)
+
+
+
+
+
+#### 代码开发
+
+![image-20220508220656546](pictures/image-20220508220656546.png)
+
+`问题`：
+
+![image-20220508230416447](pictures/image-20220508230416447.png)
+
+> 建议使用第二种
+
+
+
+`总结`：
+
+![image-20220508232834957](pictures/image-20220508232834957.png)
+
+
+
+
+
+### 员工信息分页查询
+
+
+
+#### 需求分析
+
+
+
+
+
+
+
+
+
+#### 代码开发
+
+
+
+
+
+#### 功能测试
+
+
+
+
+
+### 启用/禁用员工账号
+
+
+
+
+
+
+
+
+
+### 编辑员工信息
+
+
 
