add query,disable Employee

--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -777,27 +777,65 @@
 
 #### 需求分析
 
-
-
-
-
-
+![image-20220509204403710](pictures/image-20220509204403710.png)
 
 
 
 #### 代码开发
 
-
-
-
-
-#### 功能测试
+![image-20220509204633824](pictures/image-20220509204633824.png)
 
 
 
 
 
 ### 启用/禁用员工账号
+
+
+
+#### 需求分析
+
+![image-20220509225803022](pictures/image-20220509225803022.png)
+
+
+
+![image-20220509225823169](pictures/image-20220509225823169.png)
+
+
+
+#### 代码开发
+
+![image-20220509225856660](pictures/image-20220509225856660.png)
+
+
+
+![image-20220509230451905](pictures/image-20220509230451905.png)
+
+
+
+![image-20220509231158073](pictures/image-20220509231158073.png)
+
+
+
+![image-20220509232702726](pictures/image-20220509232702726.png)
+
+> 写成通用是因为，旁边还有一个编辑的按钮，也是相同的操作，方便更好的复用
+
+
+
+#### 功能测试
+
+![image-20220509234604112](pictures/image-20220509234604112.png)
+
+
+
+#### 代码修复
+
+![image-20220509234624208](pictures/image-20220509234624208.png)
+
+![image-20220509234906736](pictures/image-20220509234906736.png)
+
+![image-20220509235129433](pictures/image-20220509235129433.png)
 
 
 
