--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -10,7 +10,7 @@
 
 # 整体介绍
 
-
+图片资源都在`pictures`目录下，网页上看不见的，下载到本地，用typora打开，设置图片的加载路径从当前目录开始即可。
 
 
 
@@ -18,13 +18,13 @@
 
 1. 流程
 
-![image-20220504213059438](.\pictures\image-20220504213059438.png)
+![image-20220504213059438](pictures\image-20220504213059438.png)
 
 
 
 2. 角色分工
 
-   ![image-20220504213446025](.\pictures\image-20220504213446025.png)
+   ![image-20220504213446025](pictures\image-20220504213446025.png)
 
    
 
@@ -34,7 +34,7 @@
    - [ ] 测试环境
    - [ ] 生产环境
 
-   ![image-20220504213704875](.\pictures\image-20220504213704875.png)
+   ![image-20220504213704875](pictures\image-20220504213704875.png)
 
 
 
@@ -43,7 +43,7 @@
 
 
 
-![image-20220504215641403](.\pictures\image-20220504215641403.png)
+![image-20220504215641403](pictures\image-20220504215641403.png)
 
 
 
@@ -51,7 +51,7 @@
 
 
 
-![image-20220504215729984](.\pictures\image-20220504215729984.png)
+![image-20220504215729984](pictures\image-20220504215729984.png)
 
 * 产品原型主要用于展示项目的功能，并不是最终的页面效果。
 
@@ -61,7 +61,7 @@
 
 
 
-![image-20220504220120986](.\pictures\image-20220504220120986.png)
+![image-20220504220120986](pictures\image-20220504220120986.png)
 
 
 
@@ -69,7 +69,7 @@
 
 
 
-![image-20220504220544306](.\pictures\image-20220504220544306.png)
+![image-20220504220544306](pictures\image-20220504220544306.png)
 
 
 
@@ -77,7 +77,7 @@
 
 
 
-![image-20220504222643999](.\pictures\image-20220504222643999.png)
+![image-20220504222643999](pictures\image-20220504222643999.png)
 
 
 
@@ -91,7 +91,7 @@
 
 1. 建库
 
-![image-20220504223008159](.\pictures\image-20220504223008159.png)
+![image-20220504223008159](pictures\image-20220504223008159.png)
 
 
 
@@ -476,7 +476,7 @@
    
    ```
 
-   ![image-20220504223337842](.\pictures\image-20220504223337842.png)
+   ![image-20220504223337842](pictures\image-20220504223337842.png)
 
 
 
@@ -492,21 +492,21 @@
 
 1. 选择`maven`项目
 
-   ![image-20220504224243270](.\pictures\image-20220504224243270.png)
+   ![image-20220504224243270](pictures\image-20220504224243270.png)
 
 2. 输入项目名，完成
 
-   ![image-20220504224343045](.\pictures\image-20220504224343045.png)
+   ![image-20220504224343045](pictures\image-20220504224343045.png)
 
 3. 初始的`pom`文件，上一步忘写了`artifact`设置的可以直接在pom中改
 
-   ![image-20220504224710302](.\pictures\image-20220504224710302.png)
+   ![image-20220504224710302](pictures\image-20220504224710302.png)
 
 4. 配置完成后，检查`maven`、`jdk`、
 
-   ![image-20220504225058537](.\pictures\image-20220504225058537.png)
+   ![image-20220504225058537](pictures\image-20220504225058537.png)
 
-   ​	![·](.\pictures\image-20220504225301064.png)
+   ​	![·](pictures\image-20220504225301064.png)
 
 5. 导入具体的依赖
 
@@ -623,7 +623,7 @@
 
 7. 初始项目启动
 
-   ![image-20220504230904831](.\pictures\image-20220504230904831.png)
+   ![image-20220504230904831](pictures\image-20220504230904831.png)
 
 8. 导入静态资源文件，`backend`存放的时候后台管理的页面文件，`font`存放的前台的展示页面文件
 
@@ -631,11 +631,11 @@
 
 9. 由于boot默认的静态资源在`static`文件夹下，所以我们需要自己指定资源文件路径，创建`config`包下的`WebMvcConfig`，在这个里面指定。
 
-   ![image-20220504232925666](.\pictures\image-20220504232925666.png)
+   ![image-20220504232925666](pictures\image-20220504232925666.png)
 
    * 重新运行项目，效果如图（localhost:8080/backend/index.html）
 
-     ![image-20220504233117036](.\pictures\image-20220504233117036.png)		
+     ![image-20220504233117036](pictures\image-20220504233117036.png)		
 
 
 
@@ -695,7 +695,7 @@
 
 ## 员工管理业务开发
 
-
+![image-20220510195950811](pictures/image-20220510195950811.png)
 
 ### 完善登录功能
 
@@ -841,11 +841,213 @@
 
 
 
-
-
-
-
 ### 编辑员工信息
+
+
+
+#### 需求分析
+
+![image-20220510191045179](pictures/image-20220510191045179.png)
+
+
+
+
+
+#### 代码开发
+
+![image-20220510191144301](pictures/image-20220510191144301.png)
+
+
+
+
+
+## 分类管理业务开发
+
+![image-20220510195930983](pictures/image-20220510195930983.png)
+
+
+
+### 公共字段自动填充
+
+
+
+#### 问题分析
+
+![image-20220510200552214](pictures/image-20220510200552214.png)
+
+
+
+
+
+#### 代码实现
+
+![image-20220510200817230](pictures/image-20220510200817230.png)
+
+1. 第一步：在公共属性上面加注解`@TableField`（mybatisplus提供）
+
+   ![image-20220510200937039](pictures/image-20220510200937039.png)
+
+   
+
+2. 第二步，创建并实现类`MyMetaObjectHandler`
+
+   ![image-20220510201417620](pictures/image-20220510201417620.png)
+
+   
+
+
+
+#### 功能测试
+
+![image-20220510202932954](pictures/image-20220510202932954.png)
+
+
+
+
+
+#### 功能完善
+
+![image-20220510202902560](pictures/image-20220510202902560.png)
+
+![image-20220510203127853](pictures/image-20220510203127853.png)
+
+![image-20220510203516675](pictures/image-20220510203516675.png)
+
+![image-20220510203855967](pictures/image-20220510203855967.png)
+
+
+
+### 新增分类
+
+
+
+#### 需求分析
+
+![image-20220510212841113](pictures/image-20220510212841113.png)
+
+![image-20220510212955226](pictures/image-20220510212955226.png)
+
+
+
+
+
+#### 数据模型
+
+![image-20220510213154377](pictures/image-20220510213154377.png)
+
+![image-20220510213403667](pictures/image-20220510213403667.png)
+
+
+
+
+
+#### 代码开发
+
+![image-20220510213429823](pictures/image-20220510213429823.png)
+
+> CategoryMapper、CategoryService、CategoryServiceImpl只需继承或者实现对应的接口的即可
+
+![image-20220510214910041](pictures/image-20220510214910041.png)
+
+> 通过前端测试（点击对应的按钮发送请求），可以发现添加菜品分类和新增套餐分类发送的地址是：
+>
+> ```
+> http://localhost:8080/category
+> ```
+>
+> ![image-20220510215306412](pictures/image-20220510215306412.png)
+
+
+
+
+
+### 分类信息分页查询
+
+
+
+#### 需求分析
+
+![image-20220510221016713](pictures/image-20220510221016713.png)
+
+
+
+
+
+#### 代码开发
+
+![image-20220510221044110](pictures/image-20220510221044110.png)
+
+
+
+
+
+#### 功能测试
+
+> 这里有个注意的地方：导入黑马提供的`Category`类中有一个属性是`isDeleted`，但是在数据库的`Category`表中是没有这个字段的，所以运行时会报错查不出来。
+>
+> 解决：暂时先注释掉，后面用到在看。
+
+
+
+
+
+### 删除分类
+
+
+
+#### 需求分析
+
+![image-20220510224923575](pictures/image-20220510224923575.png)
+
+
+
+
+
+#### 代码开发
+
+![image-20220510225055472](pictures/image-20220510225055472.png)
+
+
+
+
+
+#### 功能测试
+
+> 这里测试的时候也有问题：首先查看前端返回的请求
+>
+> ![image-20220510230909958](pictures/image-20220510230909958.png)
+>
+> * 可以发现请求的参数数据不是id ，而是`ids`！！！！所以在执行删除菜品的时候会不成功。
+>
+> * `Ctrl+shift+f`在idea中全局搜索ids的，发现有多处使用，为了保险起见，我把delete方法参数改为ids，而不是改黑马提供的前端ids。
+>
+>   ![image-20220510231210766](pictures/image-20220510231210766.png)
+>
+> * 改之前：7条
+>
+>   ![image-20220510231351223](pictures/image-20220510231351223.png)
+>
+>   删之后：6条
+>
+>   ![image-20220510231419853](pictures/image-20220510231419853.png)
+
+
+
+
+
+#### 功能完善
+
+![image-20220510231539414](pictures/image-20220510231539414.png)
+
+
+
+
+
+### 修改分类
+
+
+
+
 
 
 
