finsih 47:classified management business

--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -1047,6 +1047,126 @@
 
 
 
+#### 需求分析
+
+![image-20220511201312863](pictures/image-20220511201312863.png)
+
+
+
+
+
+#### 代码块开发
+
+```java
+@PutMapping
+    public R<String> update( @RequestBody Category category ){
+        log.info( "修改分类信息：{}" , category );
+        
+        categoryService.updateById( category );
+        return R.success( "修改分类信息成功" );
+    }
+```
+
+
+
+
+
+## 菜品管理业务开发
+
+后端效果：
+
+![image-20220511211841158](pictures/image-20220511211841158.png)
+
+移动端效果：
+
+![image-20220511212519130](pictures/image-20220511212519130.png)
+
+
+
+> 起售、停售、删除的功能需要自己完善。
+
+
+
+
+
+### 文件上传下载
+
+
+
+#### 文件上传介绍
+
+![image-20220511213039437](pictures/image-20220511213039437.png)
+
+> 文件上传`必须满足`上面的三点要求，才可以上传成功！！！！
+
+![image-20220511214617107](pictures/image-20220511214617107.png)
+
+![image-20220511214636823](pictures/image-20220511214636823.png)
+
+> 底层采用的是apache的两个组件！
+
+
+
+
+
+#### 文件下载介绍
+
+![image-20220511214849729](pictures/image-20220511214849729.png)
+
+
+
+
+
+#### 文件上传代码实现
+
+> 前端已经提供，实现的是后端的。
+
+![image-20220511215011486](pictures/image-20220511215011486.png)
+
+
+
+```JAVA
+
+```
+
+方法参数必须跟下面中的`file`保持一致！！！！（我的是google浏览器）
+
+![image-20220511224320918](pictures/image-20220511224320918.png)
+
+
+
+
+
+
+
+#### 文件下载代码实现
+
+
+
+
+
+
+
+
+
+### 新增菜品
+
+
+
+
+
+
+
+### 菜品信息分页查询
+
+
+
+
+
+
+
+### 修改菜品
+
 
 
 
