--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -1126,14 +1126,60 @@
 
 
 ```JAVA
+ /**
+     * 文件上传
+     * @param file
+     * @return
+     */
+    @PostMapping("/upload") //file参数名必须跟前端中form-data中的name=“file”保持一致
+    public R<String> upload(MultipartFile file ){  // file改成abc就会报错
+// file是一个临时文件，暂时存放在："C:\Users\十二书生\AppData\Local\Temp\tomcat.8080.71757113686606579\work\Tomcat\localhost\ROOT\"目录下
+//  在下面的log那打一个端点可以查看到。所以需要转存，不然应用停止运行后就会消失
+        log.info( file.toString() );
+        
+         //原始文件名  (但是可能会存在重名的问题)
+        String originalFilename = file.getOriginalFilename();
+//        截取原始文件的后缀名
+        String suffix = originalFilename.substring( originalFilename.lastIndexOf( "." ) );
 
+        //使用UUID重新生成文件名，防止文件名称重复造成文件覆盖
+        String fileName = UUID.randomUUID().toString() + suffix ;
+        
+//        创建一个目录对象
+        File dir = new File( basePath );
+//        判断当前目录是否存在
+        if( !dir.exists() ){
+            //目录不存在，需要创建
+            dir.mkdirs();
+        }
+        
+        try{
+//            将临时文件转存到指定位置(原视频中没有+ "/"成功运行，但是我没成功，加了之后才能正确上传)
+            file.transferTo( new File( basePath + "/" + fileName ) );
+            
+        }catch(IOException e){
+            e.printStackTrace();
+        }
+        
+        return R.success( fileName );
+    }
 ```
 
 方法参数必须跟下面中的`file`保持一致！！！！（我的是google浏览器）
 
 ![image-20220511224320918](pictures/image-20220511224320918.png)
 
-
+> 有个注意点，视频中转存文件是这么写的，路径和文件之间没有“/”，也能成功上传
+>
+> ![image-20220511234117648](pictures/image-20220511234117648.png)
+>
+> 但我不行，经过我的调试之后，加上“/”就可以了。有点迷糊
+>
+> ![image-20220511234241729](pictures/image-20220511234241729.png)
+>
+> `解决`：
+>
+> 破案了！！！原来是在配置文件下，**指定的路径少写个“\”**，所以其实一直上传到了上一级目录。
 
 
 
@@ -1141,7 +1187,7 @@
 
 #### 文件下载代码实现
 
-
+![image-20220511233938083](pictures/image-20220511233938083.png)
 
 
 
