finish : dish management

--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -1189,7 +1189,37 @@
 
 ![image-20220511233938083](pictures/image-20220511233938083.png)
 
-
+```java
+ /**
+     * 文件下载：只需要通过输出流写出到浏览器,所以不需要返回值 
+     * @param name
+     * @param response
+     */
+    @GetMapping("/download")
+    public void download( String name , HttpServletResponse response ){
+        try{
+//        输入流读取文件内容
+            FileInputStream fileInputStream = new FileInputStream( new File( basePath + name ) ) ;
+//        输出流写回浏览器，在浏览器展示
+            ServletOutputStream outputStream = response.getOutputStream();
+//            设置文件的类型
+            response.setContentType( "image/type  " );
+            
+            int len = 0 ;
+            byte[] bytes = new byte[1024];
+            while( (len = fileInputStream.read( bytes )) != -1 ){
+                outputStream.write( bytes , 0 , len );
+                outputStream.flush();
+            }
+            
+            outputStream.close();
+            fileInputStream.close();
+        }catch( Exception e ){
+            e.printStackTrace();
+        }
+        
+    } 
+```
 
 
 
@@ -1199,6 +1229,44 @@
 
 
 
+#### 需求分析
+
+![image-20220512202114441](pictures/image-20220512202114441.png)
+
+
+
+
+
+#### 数据模型
+
+![image-20220512202257457](pictures/image-20220512202257457.png)
+
+`dish`：
+
+![image-20220512202350624](pictures/image-20220512202350624.png)
+
+`dish_flavor`：
+
+![image-20220512202420784](pictures/image-20220512202420784.png)
+
+
+
+
+
+#### 代码开发
+
+![image-20220512202722595](pictures/image-20220512202722595.png)
+
+![image-20220512203805524](pictures/image-20220512203805524.png)
+
+新增菜品设计两个表：
+
+![image-20220512212044742](pictures/image-20220512212044742.png)
+
+> 前端发送的数据跟实体类不对应，过于复杂的情况需要`dto`
+>
+> 
+
 
 
 
@@ -1206,6 +1274,30 @@
 ### 菜品信息分页查询
 
 
+
+#### 需求分析
+
+![image-20220512220207206](pictures/image-20220512220207206.png)
+
+
+
+
+
+#### 代码开发
+
+![image-20220512220351151](pictures/image-20220512220351151.png)
+
+![image-20220512220554420](pictures/image-20220512220554420.png)
+
+
+
+
+
+#### 功能测试
+
+![image-20220512224633266](pictures/image-20220512224633266.png)
+
+这部分菜品图片展示不出来是正常的，因为最初的数据库插入数据的时候有些数据没有对应上相应的图片，所以这里显示不出来。
 
 
 
@@ -1216,4 +1308,24 @@
 
 
 
+
+#### 需求分析
+
+![image-20220512225102769](pictures/image-20220512225102769.png)
+
+
+
+
+
+#### 代码开发
+
+![image-20220512225148943](pictures/image-20220512225148943.png)
+
+> 第一个功能在“新增菜品”的时候，已经实现了
+
+
+
+
+
+## 套餐管理业务开发
 
