finsh add new setmeal

--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -1329,3 +1329,65 @@
 
 ## 套餐管理业务开发
 
+![image-20220513221626295](pictures/image-20220513221626295.png)
+
+![image-20220513221716424](pictures/image-20220513221716424.png)
+
+移动端：
+
+![image-20220513221741395](pictures/image-20220513221741395.png)
+
+
+
+
+
+### 新增套餐
+
+
+
+#### 需求分析
+
+![image-20220513221934707](pictures/image-20220513221934707.png)
+
+
+
+
+
+#### 数据模型
+
+![image-20220513222126226](pictures/image-20220513222126226.png)
+
+ 套餐表setmeal：
+
+![image-20220513222346748](pictures/image-20220513222346748.png)
+
+套餐菜品关系表setmeal_dish：
+
+![image-20220513222405399](pictures/image-20220513222405399.png)
+
+
+
+
+
+#### 代码开发
+
+![image-20220513222454481](pictures/image-20220513222454481.png)
+
+![image-20220513223615469](pictures/image-20220513223615469.png)
+
+> 1,2已经实现了，从3开始
+
+
+
+
+
+### 套餐信息分页查询
+
+
+
+
+
+
+
+### 删除套餐
+
