finish setmeal management

--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -1387,7 +1387,221 @@
 
 
 
+#### 需求分析
+
+ ![image-20220514191233446](pictures/image-20220514191233446.png)
+
+
+
+
+
+#### 代码开发
+
+![image-20220514191324024](pictures/image-20220514191324024.png)
+
+
+
 
 
 ### 删除套餐
+
+
+
+#### 需求分析
+
+![image-20220514195943545](pictures/image-20220514195943545.png)
+
+
+
+
+
+#### 代码开发
+
+![image-20220514200051993](pictures/image-20220514200051993.png)
+
+
+
+
+
+## 手机验证码登录
+
+效果：
+
+![image-20220514210602021](pictures/image-20220514210602021.png)
+
+
+
+
+
+### 短信发送
+
+> 研究探索之后，发现[容联云](https://www.yuntongxun.com/)免费可以免费申请，不需要资质，只需要注册登录即可。
+
+
+
+
+
+#### 短信服务介绍
+
+![image-20220514210711838](pictures/image-20220514210711838.png)
+
+![image-20220514211028875](pictures/image-20220514211028875.png)
+
+> 本项目使用的是验证码
+
+
+
+
+
+#### 阿里云短信服务
+
+![image-20220514211646351](pictures/image-20220514211646351.png)
+
+![image-20220514212146099](pictures/image-20220514212146099.png)
+
+1. ![image-20220514212637254](pictures/image-20220514212637254.png)
+
+2. ![image-20220514212740146](pictures/image-20220514212740146.png)
+
+3. ![image-20220514213252337](pictures/image-20220514213252337.png)
+
+   > 不一定符合要求可以添加成功
+
+4. 配置完之后，还需要添加模板：短信模板包含短信发送内容、场景、变量信息。
+
+   ![image-20220514213404109](pictures/image-20220514213404109.png)
+
+5. ![image-20220514213834035](pictures/image-20220514213834035.png)
+
+   > 需要人工审核
+
+6. ![image-20220514214051976](pictures/image-20220514214051976.png)
+
+7. ![image-20220514214311546](pictures/image-20220514214311546.png)
+
+   > `AccessKey`:权限最大（感觉相当于Linux中的root），如果别人有这个，可以访问阿里云账户里面所有的服务。所以==不建议点击==这个。
+   >
+   > `子用户AccessKey`：这个权限受限。`点击这个`。
+
+8. ![image-20220514214647666](pictures/image-20220514214647666.png)
+
+9. ![image-20220514215002580](pictures/image-20220514215002580.png)
+
+10. 创建成功：
+
+    ![image-20220514215405140](pictures/image-20220514215405140.png)
+
+    
+
+11. 注意上面的`AccessKey ID`和`AccessKey Secret`，在程序中要使用
+
+12. ![image-20220514215644815](pictures/image-20220514215644815.png)
+
+13. ![image-20220514215825105](pictures/image-20220514215825105.png)
+
+14. ![image-20220514215847186](pictures/image-20220514215847186.png)
+
+15. 当`AccessKey`被别人获取的时候，可以禁用或者删除
+
+    ![image-20220514220025651](pictures/image-20220514220025651.png)
+
+
+
+
+
+#### 代码开发
+
+![image-20220514220118952](pictures/image-20220514220118952.png)
+
+![image-20220514221123954](pictures/image-20220514221123954.png)
+
+![image-20220514221334143](pictures/image-20220514221334143.png)
+
+[官网文档](https://help.aliyun.com/document_detail/112148.html)：
+
+1. 
+
+   ![image-20220514221250011](pictures/image-20220514221250011.png)
+
+2. 封装的工具类：
+
+   ```java
+   package codewater.reggie.utils;
+   
+   import com.aliyuncs.DefaultAcsClient;
+   import com.aliyuncs.IAcsClient;
+   import com.aliyuncs.dysmsapi.model.v20170525.SendSmsRequest;
+   import com.aliyuncs.dysmsapi.model.v20170525.SendSmsResponse;
+   import com.aliyuncs.exceptions.ClientException;
+   import com.aliyuncs.profile.DefaultProfile;
+   
+   /**
+    * 短信发送工具类
+    */
+   public class SMSUtils {
+   
+   	/**
+   	 * 发送短信
+   	 * @param signName 签名
+   	 * @param templateCode 模板
+   	 * @param phoneNumbers 手机号
+   	 * @param param 参数
+   	 */
+   	public static void sendMessage(String signName, String templateCode,String phoneNumbers,String param){
+   		DefaultProfile profile = DefaultProfile.getProfile("cn-hangzhou", "", "");
+   		IAcsClient client = new DefaultAcsClient(profile);
+   
+   		SendSmsRequest request = new SendSmsRequest();
+   		request.setSysRegionId("cn-hangzhou");
+   		request.setPhoneNumbers(phoneNumbers);
+   		request.setSignName(signName);
+   		request.setTemplateCode(templateCode);
+   		request.setTemplateParam("{\"code\":\""+param+"\"}");
+   		try {
+   			SendSmsResponse response = client.getAcsResponse(request);
+   			System.out.println("短信发送成功");
+   		}catch (ClientException e) {
+   			e.printStackTrace();
+   		}
+   	}
+   
+   }
+   
+   ```
+
+
+
+
+
+
+
+### 手机验证码登录
+
+
+
+#### 需求分析
+
+![image-20220514232651891](pictures/image-20220514232651891.png)
+
+
+
+
+
+#### 数据模型
+
+
+
+
+
+
+
+#### 代码开发
+
+
+
+
+
+
+
+#### 功能测试
 
