finish phone verification code

--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -1589,7 +1589,9 @@
 
 #### 数据模型
 
+![image-20220514233947979](pictures/image-20220514233947979.png)
 
+> 没有用户名和密码两个字段，是因为手机号登录的，可以唯一确定
 
 
 
@@ -1597,11 +1599,45 @@
 
 #### 代码开发
 
+![image-20220514234603859](pictures/image-20220514234603859.png)
 
+![image-20220514234825369](pictures/image-20220514234825369.png)
+
+![image-20220514235336262](pictures/image-20220514235336262.png)
 
 
 
 
 
 #### 功能测试
+
+1. 查看手机端的登录页面：http://localhost:8080/front/page/login.html
+
+   如果从电脑浏览器登录查看，需要打开开发者模式，点击手机模式，才能正确查看页面
+
+   ![image-20220514235843239](pictures/image-20220514235843239.png)
+
+2. 为了方便调试，建议在`src/main/resources/front/js/request.js`中的`timeout`设置时间长一点。
+
+3. 在测试移动端用户登录，`userController`中的login方法时，需要改前端的代码，才会正确返回两个参数值：`src/main/resources/front/page/login.html`
+
+   ![image-20220515224843377](pictures/image-20220515224843377.png)
+
+   
+
+4. 另外，也需要改上面的`getCode`方法，然后在`src/main/resources/front/page/login.html`中新加一个sendMsgApi的方法
+
+   ![image-20220515224953353](pictures/image-20220515224953353.png)
+
+   ```js
+   function sendMsgApi(data) {
+       return $axios({
+           'url': '/user/sendMsg',
+           'method': 'post',
+           data
+       })
+   }
+   ```
+
+5. 
 
