finish front: addressBook and setemal function

--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -1639,5 +1639,106 @@
    }
    ```
 
-5. 
 
+
+
+
+
+
+## 菜品展示、购物车、下单
+
+效果展示：
+
+![image-20220515235331945](pictures/image-20220515235331945.png)
+
+
+
+
+
+### 导入用户地址薄相关功能代码
+
+
+
+#### 需求分析
+
+![image-20220516172024966](pictures/image-20220516172024966.png)
+
+
+
+
+
+#### 数据模型
+
+![image-20220516172145570](pictures/image-20220516172145570.png)
+
+> 打钩的是必填的信息！
+
+
+
+
+
+#### 导入代码
+
+![image-20220516172407402](pictures/image-20220516172407402.png)
+
+
+
+
+
+### 菜品展示
+
+
+
+#### 需求分析
+
+![image-20220516202725785](pictures/image-20220516202725785.png)
+
+
+
+
+
+#### 代码开发
+
+![image-20220516202943694](pictures/image-20220516202943694.png)
+
+
+
+
+
+### 购物车
+
+
+
+#### 需求分析
+
+
+
+
+
+
+
+#### 数据模型
+
+
+
+
+
+
+
+#### 代码开发
+
+
+
+
+
+
+
+#### 功能测试
+
+
+
+
+
+
+
+### 下单
