finish user order function

--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -1423,6 +1423,12 @@
 
 
 
+
+
+# 移动端开发
+
+
+
 ## 手机验证码登录
 
 效果：
@@ -1711,7 +1717,7 @@
 
 #### 需求分析
 
-
+![image-20220516215439546](pictures/image-20220516215439546.png)
 
 
 
@@ -1719,7 +1725,11 @@
 
 #### 数据模型
 
+![image-20220516215641342](pictures/image-20220516215641342.png)
 
+> 只有菜品才有口味，套餐无口味，所以**dish_flavor**可能为空。
+>
+> 
 
 
 
@@ -1727,18 +1737,55 @@
 
 #### 代码开发
 
+![image-20220516220019484](pictures/image-20220516220019484.png)
+
+![image-20220516220249596](pictures/image-20220516220249596.png)
+
+
+
+> 要取消之前的`src/main/resources/front/api/main.js`中的购物车的url
 
 
 
 
 
 
-#### 功能测试
+
+### 用户下单
+
+> 没有支付功能，因为需要资质问题
 
 
 
 
 
+#### 需求分析
+
+![image-20220516234328143](pictures/image-20220516234328143.png)
 
 
-### 下单
+
+
+
+#### 数据模型
+
+![image-20220516234449211](pictures/image-20220516234449211.png)
+
+![image-20220516234501555](pictures/image-20220516234501555.png)
+
+![image-20220516234643291](pictures/image-20220516234643291.png)
+
+
+
+
+
+#### 代码开发
+
+![image-20220516234732924](pictures/image-20220516234732924.png)
+
+![image-20220516235018312](pictures/image-20220516235018312.png)
+
+
+
+> 移动端还有一个查看订单的功能没有开发。。。待定更新。
+
