add new branch:v1.0   to optimize

--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -1789,3 +1789,126 @@
 
 > 移动端还有一个查看订单的功能没有开发。。。待定更新。
 
+
+
+# Git
+
+> 笔记在`JavaProject`仓库下的[notes](https://gitee.com/CodeWaterStudy/java-code/tree/master/notes)目录中，这里不是重点就不写在这个文件中了
+
+
+
+
+
+# Linux
+
+> centos7
+
+
+
+## 防火墙
+
+
+
+![image-20220625224905017](pictures/image-20220625224905017.png)
+
+> 防火墙操作：
+> 1. 查看防火墙状态(systemctl status firewalld、firewall--cmd-state)
+> 2. 暂时关闭防火墙(systemctl stop firewalld)
+> 3. 永久关闭防火墙(systemctl disable firewalld)
+> 4. 开启防火墙(systemctl start firewalld)
+> 5. 开放指定端口(firewall-cmd --zone=public  –add-port=8080/tcp --permanent)
+> 6. 关闭指定端口(firewall--cmd --zone=public --remove-port=8080/tcp --permanent)
+> 7. 立即生效((firewall-cmd --reload)
+> 8. 查看开放的端口(firewall-cmd –zone=public --list-ports)
+> 9. 注意：
+>    1. systemctl是管理Linux中服务的命令，可以对服务进行启动、停止、重启、查看状态等操作
+>    2. firewall-cmd是Linux中专门用于控制防火墙的命令
+>    3. 为了保证系统安全，服务器的防火墙不建议关闭
+
+
+
+## rpm
+
+1. 查询
+
+![image-20220625230029869](pictures/image-20220625230029869.png)
+
+2. 卸载
+
+   ![image-20220626000139181](pictures/image-20220626000139181.png)
+
+
+
+
+
+## mysql
+
+1. ![image-20220626001615214](pictures/image-20220626001615214.png)
+
+
+
+
+
+## nohup
+
+![image-20220626155358455](pictures/image-20220626155358455.png)
+
+
+
+## dhcp
+
+![image-20220626180414735](pictures/image-20220626180414735.png)
+
+```shell
+IPADDR="192.168.138.100" #设置的静态IP地址
+NETMASK="255.255.255.0" # 子网掩码
+GATEWAY="192.168.138.2" #网关地址
+DNS1="192.168.138.2"  # DNS服务器
+```
+
+
+
+
+
+# 项目优化
+
+> 缓存优化
+
+
+
+## 问题
+
+![image-20220627101719332](pictures/image-20220627101719332.png)
+
+
+
+
+
+## 环境
+
+
+
+
+
+## 缓存短信验证码
+
+
+
+
+
+## 缓存菜品数据
+
+
+
+
+
+## Spring Cache
+
+
+
+
+
+## 缓存套餐数据
+
+
+
