使用Redis缓存短信验证码、菜品数据

--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -1886,6 +1886,13 @@ DNS1="192.168.138.2"  # DNS服务器
 
 ## 环境
 
+新建`v1.0`分支，开发加入redis、缓存验证码、彩屏
+
+1. ![image-20220627105811430](pictures/image-20220627105811430.png)
+2. ![image-20220627112546097](pictures/image-20220627112546097.png)
+
+
+
 
 
 
@@ -1894,9 +1901,21 @@ DNS1="192.168.138.2"  # DNS服务器
 
 
 
+### 实现思路
+
+![image-20220627112907918](pictures/image-20220627112907918.png)
+
+
+
 
 
 ## 缓存菜品数据
+
+
+
+### 实现思路
+
+![image-20220627115823669](pictures/image-20220627115823669.png)
 
 
 
