使用Spring Cache缓存套餐数据

--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -1925,9 +1925,37 @@ DNS1="192.168.138.2"  # DNS服务器
 
 
 
+### 介绍
+
+![image-20220627142359228](pictures/image-20220627142359228.png)
+
+
+
+
+
+### 常用注解
+
+![image-20220627142535496](pictures/image-20220627142535496.png)
+
+
+
+### 使用方式
+
+![image-20220627161522834](pictures/image-20220627161522834.png)
+
+
+
+
+
 
 
 ## 缓存套餐数据
+
+
+
+### 实现思路
+
+![image-20220627164449048](pictures/image-20220627164449048.png)
 
 
 
