--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -1816,10 +1816,10 @@
 > 2. 暂时关闭防火墙(systemctl stop firewalld)
 > 3. 永久关闭防火墙(systemctl disable firewalld)
 > 4. 开启防火墙(systemctl start firewalld)
-> 5. 开放指定端口(firewall-cmd --zone=public  –add-port=8080/tcp --permanent)
+> 5. 开放指定端口(firewall-cmd --zone=public  --add-port=8080/tcp --permanent)
 > 6. 关闭指定端口(firewall--cmd --zone=public --remove-port=8080/tcp --permanent)
 > 7. 立即生效((firewall-cmd --reload)
-> 8. 查看开放的端口(firewall-cmd –zone=public --list-ports)
+> 8. 查看开放的端口(firewall-cmd  --zone=public --list-ports)
 > 9. 注意：
 >    1. systemctl是管理Linux中服务的命令，可以对服务进行启动、停止、重启、查看状态等操作
 >    2. firewall-cmd是Linux中专门用于控制防火墙的命令
@@ -1956,6 +1956,290 @@ DNS1="192.168.138.2"  # DNS服务器
 ### 实现思路
 
 ![image-20220627164449048](pictures/image-20220627164449048.png)
+
+
+
+
+
+## 读写分离
+
+> win10 单台机器搭建[参考我的博客](https://www.cnblogs.com/CodeWater404/p/16421839.html)
+
+### 问题
+
+![image-20220627172537022](pictures/image-20220627172537022.png)
+
+
+
+### 解决
+
+![image-20220627172601653](pictures/image-20220627172601653.png)
+
+
+
+
+
+### MySQL主从复制
+
+
+
+#### 介绍
+
+![image-20220627173657536](pictures/image-20220627173657536.png)
+
+
+
+#### 配置
+
+![image-20220627174407716](pictures/image-20220627174407716.png)
+
+![image-20220627174648211](pictures/image-20220627174648211.png)
+
+![image-20220627174742066](pictures/image-20220627174742066.png)
+
+![image-20220627174802887](pictures/image-20220627174802887.png)
+
+![image-20220627174928777](pictures/image-20220627174928777.png)
+
+![image-20220627175014441](pictures/image-20220627175014441.png)
+
+![image-20220627175334884](pictures/image-20220627175334884.png)
+
+
+
+![image-20220627175308719](pictures/image-20220627175308719.png)
+
+![image-20220627175415921](pictures/image-20220627175415921.png)
+
+
+
+
+
+#### 测试
+
+在主库中创建数据库和表，从库也会相应的生成数据，表明配置成功。
+
+
+
+### 读写分离案例
+
+略
+
+
+
+
+
+#### Sharding-JDBC介绍
+
+![image-20220628153716584](pictures/image-20220628153716584.png)
+
+
+
+
+
+#### 入门案例
+
+![image-20220628153827281](pictures/image-20220628153827281.png)
+
+1. ![image-20220628173628723](pictures/image-20220628173628723.png)
+
+2. ```yml
+   spring:
+     shardingsphere:
+       datasource:
+         names:
+           master,slave   # 这里的名字和下面的一一对应即可
+         # 主数据源
+         master:
+           type: com.alibaba.druid.pool.DruidDataSource
+           driver-class-name: com.mysql.cj.jdbc.Driver
+           url: jdbc:mysql://192.168.138.100:3306/rw?characterEncoding=utf-8
+           username: root
+           password: root
+         # 从数据源
+         slave:
+           type: com.alibaba.druid.pool.DruidDataSource
+           driver-class-name: com.mysql.cj.jdbc.Driver
+           url: jdbc:mysql://192.168.138.101:3306/rw?characterEncoding=utf-8
+           username: root
+           password: root
+       masterslave:
+         # 读写分离配置
+         load-balance-algorithm-type: round_robin #轮询
+         # 最终的数据源名称
+         name: dataSource
+         # 主库数据源名称
+         master-data-source-name: master
+         # 从库数据源名称列表，多个逗号分隔
+         slave-data-source-names: slave
+       props:
+         sql:
+           show: true #开启SQL显示，默认false（是在控制台打印输出）
+     main:
+       allow-bean-definition-overriding: true
+   ```
+
+3. ![image-20220628175347535](pictures/image-20220628175347535.png)
+
+
+
+
+
+
+
+### 项目实现读写分离
+
+
+
+
+
+#### 数据库环境准备
+
+![image-20220628175946029](pictures/image-20220628175946029.png)
+
+
+
+
+
+#### 代码改造
+
+![image-20220628180127022](pictures/image-20220628180127022.png)
+
+1. ![image-20220628180218608](pictures/image-20220628180218608.png)
+
+   在v1.1分支上搭建主从的代码
+
+2. 测试成功后，推送到远程，然后合并到master。
+
+
+
+
+
+## Nginx
+
+
+
+
+
+### nginx概述
+
+1. ![image-20220628201732096](pictures/image-20220628201732096.png)
+
+2. ![image-20220628201919039](pictures/image-20220628201919039.png)
+
+   > `yum -y install gcc pcre-devel zlib-devel openssl openssl-devel`
+   >
+   > 如果没有wget，需要安装`yum install wget`（如果觉得麻烦可以在win上下载好，rz传过去）
+
+3. ![image-20220628204027369](pictures/image-20220628204027369.png)
+
+
+
+
+
+
+
+### nginx命令
+
+1. ![image-20220628204252375](pictures/image-20220628204252375.png)
+
+2. ![image-20220628204304371](pictures/image-20220628204304371.png)
+
+   > 注意是在`sbin`目录下运行命令，不是在conf下
+
+3. ![image-20220628204831940](pictures/image-20220628204831940.png)
+
+4. ![image-20220628205601072](pictures/image-20220628205601072.png)
+
+5. 在`/etc/profile`中配置环境变量
+
+   ![image-20220628210147626](pictures/image-20220628210147626.png)
+
+
+
+
+
+
+
+### nginx配置文件结构
+
+![image-20220628210322746](pictures/image-20220628210322746.png)
+
+
+
+
+
+### nginx具体应用
+
+1. ![image-20220628210933998](pictures/image-20220628210933998.png)
+
+2. ![image-20220628211452965](pictures/image-20220628211452965.png)
+
+   ![image-20220628211946233](pictures/image-20220628211946233.png)
+
+   ![image-20220628212040549](pictures/image-20220628212040549.png)
+
+3. ![image-20220628212350908](pictures/image-20220628212350908.png)
+
+   ![image-20220628212506912](pictures/image-20220628212506912.png)
+
+   ![image-20220628212747296](pictures/image-20220628212747296.png)
+
+
+
+
+
+## 前后端分离
+
+![image-20220628213252530](pictures/image-20220628213252530.png)
+
+
+
+
+
+### YApi
+
+1. 介绍
+
+   ![image-20220628213850602](pictures/image-20220628213850602.png)
+
+2. 使用方式
+
+   ![image-20220628213953515](pictures/image-20220628213953515.png)
+
+
+
+
+
+#### Swagger
+
+1. 介绍
+
+   ![image-20220628214831110](pictures/image-20220628214831110.png)
+
+   
+
+2. 使用方式
+
+   ![image-20220628214925364](pictures/image-20220628214925364.png)
+
+   1. ![image-20220628215024217](pictures/image-20220628215024217.png)
+
+      > 在v1.2分支上进行
+
+   2. ![image-20220628215113838](pictures/image-20220628215113838.png)
+
+   3. ![image-20220628215238559](pictures/image-20220628215238559.png)
+
+   4. 
+
+3. 常用注解
+
+
+
+
+
+#### 项目部署
 
 
 
