--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -2211,7 +2211,7 @@ DNS1="192.168.138.2"  # DNS服务器
 
 
 
-#### Swagger
+### Swagger
 
 1. 介绍
 
@@ -2220,6 +2220,8 @@ DNS1="192.168.138.2"  # DNS服务器
    
 
 2. 使用方式
+
+   > 在v1.2分支上进行
 
    ![image-20220628214925364](pictures/image-20220628214925364.png)
 
@@ -2231,15 +2233,66 @@ DNS1="192.168.138.2"  # DNS服务器
 
    3. ![image-20220628215238559](pictures/image-20220628215238559.png)
 
-   4. 
+   4. ![image-20220629231315361](pictures/image-20220629231315361.png)
 
 3. 常用注解
 
+   ![image-20220629232115770](pictures/image-20220629232115770.png)
+
+   > 为了更好的说明接口的作用
 
 
 
 
-#### 项目部署
+
+### 项目部署
 
 
 
+#### 部署架构
+
+![image-20220629234517575](pictures/image-20220629234517575.png)
+
+
+
+
+
+#### 部署环境说明
+
+![image-20220629234544376](pictures/image-20220629234544376.png)
+
+> 我的：
+>
+> 1. 本地：mysql主从
+> 2. 虚拟机：nginx，redis，git, maven , jar
+
+
+
+#### 部署前端项目
+
+1. ![image-20220629234753563](pictures/image-20220629234753563.png)
+
+2. ![image-20220630173636481](pictures/image-20220630173636481.png)
+
+   ```java
+   #反向代理配置
+   location ^~ /api/{
+    	# 截取前端发送的请求路径   $1就是api后面的路径 
+   	rewrite ^/api/(.)$ /$1 break;
+       #指定跳转的服务器
+   	proxy_pass http://192.168.138.100:8080;
+   }
+```
+   
+   
+
+
+
+
+
+#### 部署后端项目
+
+
+
+1. ![image-20220630182118938](pictures/image-20220630182118938.png)
+2. 
