修改服务器资源路径

--- a/note/瑞吉外卖.md
+++ b/note/瑞吉外卖.md
@@ -2282,9 +2282,10 @@ DNS1="192.168.138.2"  # DNS服务器
        #指定跳转的服务器
    	proxy_pass http://192.168.138.100:8080;
    }
-```
+   ```
+
    
-   
+
 
 
 
@@ -2295,4 +2296,8 @@ DNS1="192.168.138.2"  # DNS服务器
 
 
 1. ![image-20220630182118938](pictures/image-20220630182118938.png)
-2. 
+2. ![image-20220630183111029](pictures/image-20220630183111029.png)
+3. ![image-20220630183258196](pictures/image-20220630183258196.png)
+
+
+
